--- a/style.css
+++ b/style.css
@@ -1,97 +1,328 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  /* color */
+  --grey50: #f9fafb;
+  --grey100: #f2f4f6;
+  --grey200: #e5e8eb;
+  --grey300: #d1d6db;
+  --grey400: #b0b8c1;
+  --grey500: #8b95a1;
+  --grey600: #6b7684;
+  --grey700: #4e5968;
+  --grey800: #333d4b;
+  --grey900: #191f28;
+  --greyOpacity50: rgba(0,23,51,0.02);
+  --greyOpacity100: rgba(2,32,71,0.05);
+  --greyOpacity200: rgba(0,27,55,0.1);
+  --greyOpacity300: rgba(0,29,58,0.18);
+  --greyOpacity400: rgba(0,29,54,0.31);
+  --greyOpacity500: rgba(3,24,50,0.46);
+  --greyOpacity600: rgba(0,19,43,0.58);
+  --greyOpacity700: rgba(3,18,40,0.7);
+  --greyOpacity800: rgba(0,12,30,0.8);
+  --greyOpacity900: rgba(2,9,19,0.91);
+  --white: #fff;
+  --black: #000;
+  --blue50: #e8f3ff;
+  --blue200: #90c2ff;
+  --blue100: #c9e2ff;
+  --blue300: #64a8ff;
+  --blue400: #4593fc;
+  --blue500: #3182f6;
+  --blue600: #2272eb;
+  --blue700: #1b64da;
+  --blue800: #1957c2;
+  --blue900: #194aa6;
+  --red50: #fee;
+  --red100: #ffd4d6;
+  --red200: #feafb4;
+  --red300: #fb8890;
+  --red400: #f66570;
+  --red500: #f04452;
+  --red600: #e42939;
+  --red700: #d22030;
+  --red800: #bc1b2a;
+  --red900: #a51926;
+  --orange50: #fff3e0;
+  --orange100: #ffe0b2;
+  --orange200: #ffcc80;
+  --orange300: #ffbd51;
+  --orange400: #ffa927;
+  --orange500: #fe9800;
+  --orange600: #fb8800;
+  --orange700: #f57800;
+  --orange800: #ed6700;
+  --orange900: #e45600;
+  --yellow50: #fff9e7;
+  --yellow100: #ffefbf;
+  --yellow200: #ffe69b;
+  --yellow300: #ffdd78;
+  --yellow400: #ffd158;
+  --yellow500: #ffc342;
+  --yellow600: #ffb331;
+  --yellow700: #faa131;
+  --yellow800: #ee8f11;
+  --yellow900: #dd7d02;
+  --purple50: #f9f0fc;
+  --purple100: #edccf8;
+  --purple200: #da9bef;
+  --purple300: #c770e4;
+  --purple400: #b44bd7;
+  --purple500: #a234c7;
+  --purple600: #9128b4;
+  --purple700: #8222a2;
+  --purple800: #73228e;
+  --purple900: #65237b;
+  --teal50: #edf8f8;
+  --teal100: #bce9e9;
+  --teal200: #89d8d8;
+  --teal300: #58c7c7;
+  --teal400: #30b6b6;
+  --teal500: #18a5a5;
+  --teal600: #109595;
+  --teal700: #0c8585;
+  --teal800: #097575;
+  --teal900: #076565;
+  --green50: #f0faf6;
+  --green100: #aeefd5;
+  --green200: #76e4b8;
+  --green300: #3fd599;
+  --green400: #15c47e;
+  --green500: #03b26c;
+  --green600: #02a262;
+  --green700: #029359;
+  --green800: #028450;
+  --green900: #027648;
+  --whiteOpacity50: rgba(209,209,253,0.05);
+  --whiteOpacity100: rgba(217,217,255,0.11);
+  --whiteOpacity200: rgba(222,222,255,0.19);
+  --whiteOpacity300: rgba(224,224,255,0.27);
+  --whiteOpacity400: rgba(232,232,253,0.36);
+  --whiteOpacity500: rgba(242,242,255,0.47);
+  --whiteOpacity600: rgba(248,248,255,0.6);
+  --whiteOpacity700: rgba(253,253,255,0.75);
+  --whiteOpacity800: rgba(253,253,254,0.89);
+  --whiteOpacity900: #fff;
+  --inverseGrey50: #202027;
+  --inverseGrey100: #2c2c35;
+  --inverseGrey200: #3c3c47;
+  --inverseGrey300: #4d4d59;
+  --inverseGrey400: #62626d;
+  --inverseGrey500: #7e7e87;
+  --inverseGrey600: #9e9ea4;
+  --inverseGrey700: #c3c3c6;
+  --inverseGrey800: #e4e4e5;
+  --inverseGrey900: #fff;
+  --background: #fff;
+  --darkBackground: #17171c;
+  --greyBackground: #f2f4f6;
+  --darkGreyBackground: #101013;
+  --layeredBackground: #fff;
+  --darkLayeredBackground: #202027;
+  --floatBackground: #fff;
+  --darkFloatBackground: #2c2c35
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+:root {
+  /* padding */
+  --padding-base-vertical: 11px;
+  --padding-base-horizontal: 16px;
+  --padding-t-vertical: 4px;
+  --padding-t-horizontal: 8px;
+  --padding-s-vertical: 7px;
+  --padding-s-horizontal: 12px;
+  --padding-l-vertical: 11px;
+  --padding-l-horizontal: 22px;
+  --padding-xl-vertical: 18px;
+  --padding-xl-horizontal: 24px;
+  --padding-container-base: 48px
 }
 
-body {
+:root {
+  /* radius */
+  --radius-s: 4px;
+  --radius-m: 8px;
+  --radius-l: 16px;
+  --radius-xl: 20px;
+  --radius-xxl: 24px
+}
+
+:root {
+  /* shadow */
+  --shadow-s: 0 0 4px 0 var(--greyOpacity100),0 4px 16px 0 var(--greyOpacity100);
+  --shadow-m: 0 8px 16px 0 var(--greyOpacity200),0 4px 8px 0 var(--greyOpacity100);
+  --shadow-l: 0 24px 40px 0 var(--greyOpacity50),0 16px 24px 0 var(--greyOpacity200),0 0 8px 0 var(--greyOpacity100)
+}
+
+:root {
+  /* font-size */
+  --line-height-base: 1.6;
+  --line-height-adjust: 1.3;
+  --font-size-h1: 56px;
+  --font-size-h2: 48px;
+  --font-size-h3: 36px;
+  --font-size-h4: 32px;
+  --font-size-h5: 24px;
+  --font-size-h6: 20px;
+  --font-size-h7: 17px;
+  --font-size-p: 15px;
+  --font-size-sm: 13px;
+  --font-size-small: 13px;
+  --font-size-xsmall: 11px;
+  --font-weight-bold: bold;
+  --font-weight-semibold: 600;
+  --font-weight-medium: 500;
+  --font-weight-regular: normal
+}
+
+:root {
+  /* index style */
+  --nav-index: 50;
+  --dimmer-index: 100;
+  --drawer-index: 110;
+  --toast-index: 500
+}
+
+:root {
+  /* button style */
+  --btn-font-size: 15px;
+  --btn-font-size-t: 12px;
+  --btn-font-size-s: 14px;
+  --btn-font-size-l: 17px;
+  --btn-font-size-xl: 17px;
+  --btn-line-height: 18px;
+  --btn-bg-base: var(--grey100);
+  --btn-color-base: var(--grey700);
+  --btn-danger-bg: var(--red500);
+  --btn-danger-weak-bg: var(--red50);
+  --btn-danger-weak-color: var(--red700);
+  --btn-border-radius: 7px;
+  --btn-addon-margin: 6px
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+* {
+  box-sizing: border-box;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: var(--black);
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+nav {
+  border-bottom: 1px solid var(--greyOpacity200);
+  height: 65px;
+}
+
+.nav-container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  max-width: 1140px;
+  width: 90%;
+  height: 100%;
+  margin: auto;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.nav-logo-container {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.nav-logo-img {
+  display: flex;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.nav-logo-img img {
+  display: inline-block;
+  width: auto;
+  height: 20px;
+  margin-right: 2px;
 }
 
-.card {
-  padding: 2em;
+.nav-logo-img span {
+  font-weight: var(--font-weight-bold);
 }
 
-.read-the-docs {
-  color: #888;
+.nav-items-container {
+  display: flex;
+  align-items: center;
+  max-width: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.nav-items-list {
+  display: flex;
+  margin: auto;
+  line-height: 30px;
+  font-size: 14px;
+}
+
+.nav-item {
+  margin-right: 20px;
+}
+
+.nav-item a {
+  padding: 12px 10px;
+  color: var(--grey600);
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.nav-item a:hover {
+  background: var(--grey100);
+  border-radius: var(--radius-m);
+}
+
+.nav-item-button a {
+  padding: 9px;
+  background-color: var(--blue500);
+  color: var(--white);
+  border-radius: var(--radius-m);
+}
+
+.nav-item-button a:hover {
+  background-color: var(--blue700);
 }
