--- a/style.css
+++ b/style.css
@@ -540,3 +540,46 @@ footer {
 .footer-social-item:last-child {
   padding-right: 0;
 }
+
+/* article */
+.article-container {
+  max-width: 700px;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.article-img {
+  margin-top: 36px;
+}
+.article-img img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.article-title {
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-bold);
+  word-break: keep-all;
+  line-height: 1.2;
+  margin: 15px 0;
+}
+
+.article-content {
+  font-size: var(--font-size-p);
+  color: var(--grey700);
+  line-height: 1.7;
+  font-size: 18px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+
+.article-content p {
+  margin: 1em 0;
+}
+.article-content h2 {
+  margin: 2em 0 0.6em 0;
+  font-size: var(--font-size-h4);
+  line-height: 1.4;
+  color: var(--grey900);
+}
